<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button2003">Answer 2003</string>
    <string name="button2004">Answer 2004</string>
    <string name="button2005">Answer 2005</string>
    <string name="button2006">Answer 2006</string>
    <string name="Version">Version 1.0</string>

</resources>